--- a/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
@@ -21,8 +21,9 @@ sources:
       2t(167), 10u(165), 10v(166), 100u(228246), 100v(228247), sr(173), blh(159),
       sd(141), 2d(168), skt(235), chnk(148). See fix yaml for derived vars.
     driver: gsv
-    metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+    metadata:
+      fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
   hourly-1deg:
     args:
       request:
@@ -46,8 +47,9 @@ sources:
       str(177), ttr(179), e(182), tsr(178), ewss(180), nsss(181), chnk(148). See fix
       yaml for derived vars.
     driver: gsv
-    metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+    metadata:
+      fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
   6hourly-1deg:
     args:
       request:
@@ -70,8 +72,9 @@ sources:
       timestyle: step
     description: 6hourly data on r100 griddeg. Contains z(129).
     driver: gsv
-    metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+    metadata:
+      fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
   monthly-1deg-2d:
     args:
       request:
@@ -94,8 +97,9 @@ sources:
     description: monthly data on r100 grid. Contains tprate(260048), 2t(167), tcc(164),
       sd(141), tciw(79), tclw(78), msl(151), tcwv(137), lcc(186), mcc(187), hcc(188).
     driver: gsv
-    metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+    metadata:
+      fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
   monthly-1deg-3d:
     args:
       request:
@@ -120,8 +124,9 @@ sources:
     description: monthly data on r100 grid. Contains u(131), v(132), t(130), r(157),
       w(135), q(133).
     driver: gsv
-    metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+    metadata:
+      fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
   lra-r100-monthly:
     driver: netcdf
     description: LRA data monthly at r100
