--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -1,6 +1,10 @@
 weightspath: &weightspath /work/bb1153/b382075/nextgems/weights #config.yaml
 areaspath: &areaspath /work/bb1153/b382075/nextgems/weights #config.yaml (fare una cartella diversa per le aree??)
 
+paths:
+  grids: /work/bb1153/b382075/aqua/grids
+
+
 #templates
 weights:
   template_default: weights_{model}_{exp}_{source}_{method}_{targetgrid}_l{level}.nc
@@ -20,69 +24,69 @@ grids:
  
  #IFS
   tco3999: 
-    path: /work/bb1153/b382075/aqua/grids/IFS/tco3999_grid.nc
+    path: $grids/IFS/tco3999_grid.nc
     space_coord: ["value"]
   tco2559: 
-    path: /work/bb1153/b382075/aqua/grids/IFS/tco2559_grid.nc
+    path: $grids/IFS/tco2559_grid.nc
     space_coord: ["value"]
   tco2559-masked:
     path: 
-      2d: /work/bb1153/b382075/aqua/grids/IFS/tco2559_grid.nc
-      2dm: /work/bb1153/b382075/aqua/grids/IFS/tco2559_grid_masked.nc
+      2d: $grids/IFS/tco2559_grid.nc
+      2dm: $grids/IFS/tco2559_grid_masked.nc
     masked_vars:
       - ci
       - sst
     vert_coord: ["2d", "2dm"]
     space_coord: ["value"]
   tco1279:  
-    path: /work/bb1153/b382075/aqua/grids/IFS/tco1279_grid.nc
+    path: $grids/IFS/tco1279_grid.nc
     space_coord: ["value"]
   tco1279-masked:
     path: 
-      2d: /work/bb1153/b382075/aqua/grids/IFS/tco1279_grid.nc
-      2dm: /work/bb1153/b382075/aqua/grids/IFS/tco1279_grid_masked.nc
+      2d: $grids/IFS/tco1279_grid.nc
+      2dm: $grids/IFS/tco1279_grid_masked.nc
     masked_vars:
       - ci
       - sst
     vert_coord: ["2d", "2dm"]
     space_coord: ["value"]
   ifs_interpolated: 
-    path: /work/bb1153/b382075/aqua/grids/IFS/ifs_interpolated5400x2700.nc
+    path: $grids/IFS/ifs_interpolated5400x2700.nc
     space_coord: ["lon", "lat"]
   tco1279_tests:
-    path: /work/bb1153/b382075/aqua/grids/IFS/tco79_grid.nc
+    path: $grids/IFS/tco79_grid.nc
     space_coord: ["cell"]
   multio_r025:
     space_coord: ["value"]
-    extra: -setgrid,/work/bb1153/b382075/aqua/grids/IFS/grid_lonlat_025.txt
-    cellareas: /work/bb1153/b382075/aqua/grids/IFS/cellarea_unstructured_025.nc
+    extra: -setgrid,$grids/IFS/grid_lonlat_025.txt
+    cellareas: $grids/IFS/cellarea_unstructured_025.nc
     cellarea_var: cell_area
 
   #ICON
   icon_R02B08_atm:
-    path: /work/bb1153/b382075/aqua/grids/ICON/icon_grid_0033_R02B08_G.nc
+    path: $grids/ICON/icon_grid_0033_R02B08_G.nc
     space_coord: ["cell"]
     extra: -selname,cell_index
   icon_R02B09_atm:
-    path: /work/bb1153/b382075/aqua/grids/ICON/icon_grid_0015_R02B09_G.nc
+    path: $grids/ICON/icon_grid_0015_R02B09_G.nc
     space_coord: ["cell"]
     extra: -selname,cell_index
   icon_R02B09_oce:  #not working!!! wrong vert coordinates?
-    path: /work/bb1153/b382075/aqua/grids/ICON/icon_grid_0015_R02B09_G.nc
+    path: $grids/ICON/icon_grid_0015_R02B09_G.nc
     space_coord: ["cell"]
     extra: -selname,cell_index
     vert_coord: ["depth_half", "depth_full"]
   icon_R02B09_intaketest: 
-      path: /work/bb1153/b382075/aqua/grids/ICON/icon_grid_0015_R02B09_G.nc
+      path: $grids/ICON/icon_grid_0015_R02B09_G.nc
       extra: -selname,cell_index
       space_coord: ["ncells"]
   icon_ngc3026_default:
     default:
       path:
-        2d: /work/bb1153/b382075/aqua/grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
-        2dm: /work/bb1153/b382075/aqua/grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional and optional 2d grid used if data are masked
-        depth_full: /work/bb1153/b382075/aqua/grids/HealPix/icon_hpx{zoom}_oce_depth_full.nc
-        depth_half: /work/bb1153/b382075/aqua/grids/HealPix/icon_hpx{zoom}_oce_depth_half.nc
+        2d: $grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
+        2dm: $grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional and optional 2d grid used if data are masked
+        depth_full: $grids/HealPix/icon_hpx{zoom}_oce_depth_full.nc
+        depth_half: $grids/HealPix/icon_hpx{zoom}_oce_depth_half.nc
       masked:   # This is the attribute used to distinguish variables which should go into the masked category
         component: ocean
       space_coord: ["cell"]
@@ -92,10 +96,10 @@ grids:
   icon_ngc3028_default:
     default:
       path:
-        2d: /work/bb1153/b382075/aqua/grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
-        2dm: /work/bb1153/b382075/aqua/grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional 2d grid used if data are masked
-        depth_full: /work/bb1153/b382075/aqua/grids/HealPix/healpix/icon_hpx{zoom}_oce_depth_full.nc
-        depth_half: /work/bb1153/b382075/aqua/grids/HealPix/healpix/icon_hpx{zoom}_oce_depth_half.nc
+        2d: $grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
+        2dm: $grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional 2d grid used if data are masked
+        depth_full: $grids/HealPix/healpix/icon_hpx{zoom}_oce_depth_full.nc
+        depth_half: $grids/HealPix/healpix/icon_hpx{zoom}_oce_depth_half.nc
       masked:   # This is the attribute used to distinguish variables which should go into the masked category
         component: ocean
       space_coord: ["cell"]
@@ -105,37 +109,37 @@ grids:
 
     #FESOM
     tco2559_interpolated_2d:
-      path: /work/bb1153/b382075/aqua/grids/FESOM/fesom_tco2559_interpolated_2d.nc
+      path: $grids/FESOM/fesom_tco2559_interpolated_2d.nc
       space_coord: ["lon", "lat"]
 
     tco2559_interpolated_3d:
-      path: /work/bb1153/b382075/aqua/grids/FESOM/fesom_tco2559_interpolated_3d.nc
+      path: $grids/FESOM/fesom_tco2559_interpolated_3d.nc
       space_coord: ["lon", "lat"]
       vert_coord: depth
 
     ng5_2d:
-      path: /work/bb1153/b382075/aqua/grids/FESOM/NG5_griddes_nodes_IFS.nc
+      path: $grids/FESOM/NG5_griddes_nodes_IFS.nc
       space_coord: ["nod2"]
       extra:
-      - -setgrid,/work/bb1153/b382075/aqua/grids/FESOM/NG5_griddes_nodes_IFS.nc
+      - -setgrid,$grids/FESOM/NG5_griddes_nodes_IFS.nc
       - -selname,cell_area
 
     ng5_3d:
       path:
-        nz: /work/bb1153/b382075/aqua/grids/FESOM/NG5_nodes_fesom_mask_nz.nc
-        nz1: /work/bb1153/b382075/aqua/grids/FESOM/NG5_nodes_fesom_mask_nz1.nc
+        nz: $grids/FESOM/NG5_nodes_fesom_mask_nz.nc
+        nz1: $grids/FESOM/NG5_nodes_fesom_mask_nz1.nc
       space_coord: ["nod2"]
       vert_coord: ["nz", "nz1"]
       extra: 
-      - -setgrid,/work/bb1153/b382075/aqua/grids/FESOM/NG5_griddes_nodes_IFS.nc 
+      - -setgrid,$grids/FESOM/NG5_griddes_nodes_IFS.nc 
     
     ng5_3d_elem:
       path: 
-        nz1: /work/bb1153/b382075/aqua/grids/FESOM/NG5_elem_fesom_mask_nz1.nc
+        nz1: $grids/FESOM/NG5_elem_fesom_mask_nz1.nc
       space_coord: ["elem"]
       vert_coord: ["nz1"]
       extra: 
-      - -setgrid,/work/bb1153/b382075/aqua/grids/FESOM/NG5_griddes_elem_IFS.nc 
+      - -setgrid,$grids/FESOM/NG5_griddes_elem_IFS.nc 
   
   r005: r7200x3600
   r010: r3600x1800
@@ -246,5 +250,3 @@ sources:
       original_3d_elem: ng5_3d_elem
 
 
-
-    
