--- a/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
@@ -31,26 +31,26 @@ sources:
       urlpath:
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg/json.dir/atm3d.json
       - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_0.25deg_p2/json.dir.job/atm3d.json
-  2D_monthly_1deg:
-    driver: zarr
-    args:
-      consolidated: false
-      urlpath:
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg/json.dir/atm2d.json
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm2d.json
-  3D_monthly_1deg:
-    driver: zarr
-    args:
-      consolidated: false
-      urlpath:
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg/json.dir/atm3d.json
-      - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm3d.json
-  WAM_1h_native:
-    driver: zarr
-    args:
-      consolidated: false
-      urlpath: 
-        reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h_wam/json.dir/atm2d.json
+  # 2D_monthly_1deg:
+  #   driver: zarr
+  #   args:
+  #     consolidated: false
+  #     urlpath:
+  #     - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg/json.dir/atm2d.json
+  #     - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm2d.json
+  # 3D_monthly_1deg:
+  #   driver: zarr
+  #   args:
+  #     consolidated: false
+  #     urlpath:
+  #     - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg/json.dir/atm3d.json
+  #     - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_monthly_1deg_p2/json.dir/atm3d.json
+  # WAM_1h_native:
+  #   driver: zarr
+  #   args:
+  #     consolidated: false
+  #     urlpath: 
+  #       reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h_wam/json.dir/atm2d.json
   lra-r100-monthly:
     driver: netcdf
     description: LRA data monthly at r100
