--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -18,7 +18,7 @@ cdo-paths: # to be checked
 
 #available grids
 grids:
-  lon_lat:   
+  lon_lat:
     space_coord: ["lon", "lat"]
  #healpix: {gridpath}/healpix/icon_hpx{zoom}_atm_2d.nc 
  
@@ -56,47 +56,33 @@ grids:
     cellarea_var: cell_area
 
   #ICON
-  icon_R02B08_atm:
+  R02B08:
     path: $grids/ICON/icon_grid_0033_R02B08_G.nc
     space_coord: ["cell"]
     extra: -selname,cell_index
-  icon_R02B09_atm:
+  R02B09:
     path: $grids/ICON/icon_grid_0015_R02B09_G.nc
     space_coord: ["cell"]
     extra: -selname,cell_index
-  icon_R02B09_oce:  #not working!!! wrong vert coordinates?
-    path: $grids/ICON/icon_grid_0015_R02B09_G.nc
-    space_coord: ["cell"]
-    extra: -selname,cell_index
-    vert_coord: ["depth_half", "depth_full"]
+  # R02B09_oce:  #not working!!! wrong vert coordinates?
+  #   path: $grids/ICON/icon_grid_0015_R02B09_G.nc
+  #   space_coord: ["cell"]
+  #   extra: -selname,cell_index
+  #   vert_coord: ["depth_half", "depth_full"]
   icon_R02B09_intaketest: 
       path: $grids/ICON/icon_grid_0015_R02B09_G.nc
       extra: -selname,cell_index
       space_coord: ["ncells"]
-  icon_ngc3026_default:
-    default:
-      path:
-        2d: $grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
-        2dm: $grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional and optional 2d grid used if data are masked
-        depth_full: $grids/HealPix/icon_hpx{zoom}_oce_depth_full.nc
-        depth_half: $grids/HealPix/icon_hpx{zoom}_oce_depth_half.nc
-      masked:   # This is the attribute used to distinguish variables which should go into the masked category
-        component: ocean
-      space_coord: ["cell"]
-      vert_coord: ["depth_half", "depth_full"]
-    lra-r100-monthly: lon_lat
-  icon_ngc3028_default:
-    default:
-      path:
-        2d: $grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
-        2dm: $grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional 2d grid used if data are masked
-        depth_full: $grids/HealPix/healpix/icon_hpx{zoom}_oce_depth_full.nc
-        depth_half: $grids/HealPix/healpix/icon_hpx{zoom}_oce_depth_half.nc
-      masked:   # This is the attribute used to distinguish variables which should go into the masked category
-        component: ocean
-      space_coord: ["cell"]
-      vert_coord: ["depth_half", "depth_full"]
-    lra-r100-monthly: lon_lat
+  icon_healpix:
+    path:
+      2d: $grids/HealPix/icon_hpx{zoom}_atm_2d.nc   # this is the default 2d grid
+      2dm: $grids/HealPix/icon_hpx{zoom}_oce_2d.nc  # this is an additional and optional 2d grid used if data are masked
+      depth_full: $grids/HealPix/icon_hpx{zoom}_oce_depth_full.nc
+      depth_half: $grids/HealPix/icon_hpx{zoom}_oce_depth_half.nc
+    masked:   # This is the attribute used to distinguish variables which should go into the masked category
+      component: ocean
+    space_coord: ["cell"]
+    vert_coord: ["depth_half", "depth_full"]
 
     #FESOM
     tco2559_interpolated_2d:
@@ -142,7 +128,7 @@ grids:
   r250: r144x72
 
 # couple grids to experiment and sources
-sources: 
+sources:
   IFS:
     control-1950-devcon:
       default: lon_lat
@@ -191,30 +177,21 @@ sources:
       ICMGG_atm2d: tco1279
       ICMU_atm2d: tco1279
       ICMU_atm3d: tco1279
-  
-    test-tco2559:
-      ICMGG_atm2d: tco2559
-      ICMU_atm3d: tco2559
-
-    test-tco79:
-      long: lon_lat
-      short: tco79
 
   ICON:
     ngc2009:
       default: lon_lat
-      atm_2d_ml: icon_R02B09_atm
-      atm_2d_ml_R02B09: icon_R02B09_atm
-      atm_2d_ml_R02B08: icon_R02B08_atm
-      oce_200m_atmgrid_R02B09: icon_R02B09_oce
+      atm_2d_ml_R02B09: R02B09
+      atm_2d_ml_R02B08: R02B08
+      #oce_200m_atmgrid_R02B09: R02B09_complete
       intake-esm-test: icon_R02B09_intaketest
 
     ngc3026:
-      default: icon_ngc3026_default
+      default: icon_healpix
       lra-r100-monthly: lon_lat
 
     ngc3028:
-      default: icon_ngc3028_default
+      default: icon_healpix
       lra-r100-monthly: lon_lat
 
   FESOM:
